// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button matches snapshots Icon only displayStyle: 2 size: undefined disabled: false 1`] = `
<button
  class="sc-bxivhb jSQTkn"
  size="2"
  type="button"
/>
`;

exports[`Button matches snapshots Icon only displayStyle: 3 size: undefined disabled: false 1`] = `
<button
  class="sc-bxivhb bjidCe"
  size="2"
  type="button"
/>
`;

exports[`Button matches snapshots Icon only displayStyle: 4 size: undefined disabled: false 1`] = `
<button
  class="sc-bxivhb jvJLll"
  size="2"
  type="button"
/>
`;

exports[`Button matches snapshots Links displayStyle: 5 size: undefined disabled: false 1`] = `
<button
  class="sc-bxivhb bMRdNC"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Links displayStyle: 5 size: undefined disabled: false 2`] = `
<a
  class="sc-htpNat gnbYEO"
  href="http://www.google.pl"
  size="2"
  target="_blank"
>
  <test-file-stub
    classname="sc-ifAKCX evOPPJ"
  />
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    Click
  </p>
</a>
`;

exports[`Button matches snapshots Links displayStyle: 6 size: undefined disabled: false 1`] = `
<button
  class="sc-bxivhb jvxDBb"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Links displayStyle: 6 size: undefined disabled: false 2`] = `
<a
  class="sc-htpNat iPUYCH"
  href="http://www.google.pl"
  size="2"
  target="_blank"
>
  <test-file-stub
    classname="sc-ifAKCX psvBQ"
  />
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    Click
  </p>
</a>
`;

exports[`Button matches snapshots Links displayStyle: 7 size: undefined disabled: false 1`] = `
<button
  class="sc-bxivhb cqMuvY"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Links displayStyle: 7 size: undefined disabled: false 2`] = `
<a
  class="sc-htpNat dRZqTY"
  href="http://www.google.pl"
  size="2"
  target="_blank"
>
  <test-file-stub
    classname="sc-ifAKCX evOPPJ"
  />
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    Click
  </p>
</a>
`;

exports[`Button matches snapshots Links displayStyle: 8 size: undefined disabled: false 1`] = `
<button
  class="sc-bxivhb cVfeYA"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa byUSSw sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Links displayStyle: 8 size: undefined disabled: false 2`] = `
<a
  class="sc-htpNat jfhMHA"
  href="http://www.google.pl"
  size="2"
  target="_blank"
>
  <test-file-stub
    classname="sc-ifAKCX evOPPJ"
  />
  <p
    class="sc-bdVaJa byUSSw sc-EHOje asQWf"
  >
    Click
  </p>
</a>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 0 disabled: false 1`] = `
<button
  class="sc-bxivhb itOvmg"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 0 disabled: true 1`] = `
<button
  class="sc-bxivhb jOFWoz"
  disabled=""
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 1 disabled: false 1`] = `
<button
  class="sc-bxivhb gnBqim"
  size="1"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 1 disabled: true 1`] = `
<button
  class="sc-bxivhb juEZQd"
  disabled=""
  size="1"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 2 disabled: false 1`] = `
<button
  class="sc-bxivhb eGbwom"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 2 disabled: true 1`] = `
<button
  class="sc-bxivhb cdFmKc"
  disabled=""
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 0 disabled: false 1`] = `
<button
  class="sc-bxivhb OUQpl"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 0 disabled: true 1`] = `
<button
  class="sc-bxivhb eNRKTw"
  disabled=""
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 1 disabled: false 1`] = `
<button
  class="sc-bxivhb gjlGlT"
  size="1"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 1 disabled: true 1`] = `
<button
  class="sc-bxivhb iTlkAO"
  disabled=""
  size="1"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 2 disabled: false 1`] = `
<button
  class="sc-bxivhb hdqQCO"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 2 disabled: true 1`] = `
<button
  class="sc-bxivhb gWYhKV"
  disabled=""
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 0 disabled: false 1`] = `
<button
  class="sc-bxivhb itOvmg"
  type="button"
>
  <test-file-stub
    classname="sc-ifAKCX evOPPJ"
  />
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 0 disabled: true 1`] = `
<button
  class="sc-bxivhb jOFWoz"
  disabled=""
  type="button"
>
  <test-file-stub
    classname="sc-ifAKCX evOPPJ"
  />
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 1 disabled: false 1`] = `
<button
  class="sc-bxivhb gnBqim"
  size="1"
  type="button"
>
  <test-file-stub
    classname="sc-ifAKCX evOPPJ"
  />
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 1 disabled: true 1`] = `
<button
  class="sc-bxivhb juEZQd"
  disabled=""
  size="1"
  type="button"
>
  <test-file-stub
    classname="sc-ifAKCX evOPPJ"
  />
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 2 disabled: false 1`] = `
<button
  class="sc-bxivhb eGbwom"
  size="2"
  type="button"
>
  <test-file-stub
    classname="sc-ifAKCX evOPPJ"
  />
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 2 disabled: true 1`] = `
<button
  class="sc-bxivhb cdFmKc"
  disabled=""
  size="2"
  type="button"
>
  <test-file-stub
    classname="sc-ifAKCX evOPPJ"
  />
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 0 disabled: false 1`] = `
<button
  class="sc-bxivhb OUQpl"
  type="button"
>
  <test-file-stub
    classname="sc-ifAKCX evOPPJ"
  />
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 0 disabled: true 1`] = `
<button
  class="sc-bxivhb eNRKTw"
  disabled=""
  type="button"
>
  <test-file-stub
    classname="sc-ifAKCX evOPPJ"
  />
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 1 disabled: false 1`] = `
<button
  class="sc-bxivhb gjlGlT"
  size="1"
  type="button"
>
  <test-file-stub
    classname="sc-ifAKCX evOPPJ"
  />
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 1 disabled: true 1`] = `
<button
  class="sc-bxivhb iTlkAO"
  disabled=""
  size="1"
  type="button"
>
  <test-file-stub
    classname="sc-ifAKCX evOPPJ"
  />
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 2 disabled: false 1`] = `
<button
  class="sc-bxivhb hdqQCO"
  size="2"
  type="button"
>
  <test-file-stub
    classname="sc-ifAKCX evOPPJ"
  />
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 2 disabled: true 1`] = `
<button
  class="sc-bxivhb gWYhKV"
  disabled=""
  size="2"
  type="button"
>
  <test-file-stub
    classname="sc-ifAKCX evOPPJ"
  />
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots With intl message displayStyle: 0 size: 2 disabled: false 1`] = `
<button
  class="sc-bxivhb eGbwom"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots With intl message displayStyle: 0 size: 2 disabled: false 2`] = `
<button
  class="sc-bxivhb eGbwom"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-EHOje asQWf"
  >
    News
  </p>
</button>
`;
